--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -29,9 +29,9 @@
       <%# CARD DASHBOARD %>
       <div class = "dashboard-cards">
         <% @bookings.each do |booking| %>
-        <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 d-flex flex-column justify-content-between">
+        <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 mt-3 d-flex flex-column justify-content-between">
           <div class="m-2">
-            <div class= "d-flex justify-content-center">
+            <div class= "d-flex justify-content-center p-2">
               <h2 style="color: #003459;"><%= booking.van.title %></h2>
             </div>
             <div class="my-2 d-flex justify-content-center ">
