--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -67,17 +67,20 @@
   <div class="d-flex justify-content-between">
     <div style="margin-top:20px;width:65%">
         <div class="border-bottom">
-          <h4><%=@van.brand%></h4>
+          <h3><%=@van.title%></h3>
+
+          <h5><%=@van.brand%></h5>
+          <p><%=@van.location%></p>
           <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> peoples</p>
         </div>
         <div class="border-bottom" style="margin-top:20px">
-          <h4>Van proposition:</h4>
+          <h4>Description:</h4>
           <p style="margin-bottom:10px"><%=@van.description%></p>
         </div>
         <div class="d-flex justify-content-between
         ">
           <div  class="pe-5" style="margin-top:20px">
-            <h4>Van Caracteristics:</h4>
+            <h4>Characteristics:</h4>
             <p><i class="fa-solid fa-road"></i>  <%= @van.mileage %> mileage</p>
             <p><i class="fa-solid fa-brush"></i>  <%= @van.color %></p>
             <p><i class="fa-solid fa-gas-pump"></i>  Gaz</p>
@@ -122,19 +125,14 @@
     </div>
   </div>
 </div>
-<div class="container van-show border-top d-flex justify-content-center"  style="width:80%;margin-top:20px">
-    <div style="margin-top:20px">
-      <h4>Van location</h4>
-      <p><%=@van.location%></p>
-    </div>
+<div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px">
+  <div style="margin-top:20px">
+    <h4>Location</h4>
+    <p><%=@van.location%></p>
+  </div>
+  <div style="width: 100%; height: 600px;"
+    data-controller="map"
+    data-map-markers-value="<%= @markers.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
 </div>
-
-
-
-
-
-
-
-    <div class="modal-body">
-
-                </div>
