--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -16,5 +16,25 @@
     <p class="notice"><%= notice %></p>
     <p class="alert"><%= alert %></p>
   </body>
+  <script src="//cdn.jsdelivr.net/npm/sweetalert2@11"></script>
+  <script src="sweetalert2.all.min.js"></script>
+  <script>
+  document.getElementById('confirm-reservation').addEventListener(submit, fonction()) {
+    console.log('test')
+Swal.fire({
+  title: 'Custom width, padding, color, background.',
+  width: 600,
+  padding: '3em',
+  color: '#716add',
+  background: '#fff url(/images/trees.png)',
+  backdrop: `
+    rgba(0,0,123,0.4)
+    url("/images/nyan-cat.gif")
+    left top
+    no-repeat
+  `
+})
+  }
+</script>
 
 </html>
