--- a/app/views/pages/dashboard.html.erb
+++ b/app/views/pages/dashboard.html.erb
@@ -1,63 +1,152 @@
 
-<div class="app-container">
-  <div class="app-content">
-<div class="app-sidebar">
-      <div class="app-sidebar-link">
-        <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
-          <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
-          <polyline points="9 22 9 12 15 12 15 22" /></svg>
-      </div>
-      <%= link_to my_vans_path do %>
-      <div href="" class="app-sidebar-link active">
-        <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
-          <defs />
-          <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
-        </svg>
-      </div>
-<%end%>
-</div>
-    <div class="vans-container">
-      <div class="vans-container-header">
-        <div class="vans-container-header-left">
-          <p class="rentals-to-come">Locations à venir </p>
-          <p class="rentals-number"><em>  (<%=Booking.all.count%>)</em></p>
-        </div>
-        <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
-      </div>
+<div style="display:block;">
 
-      <%# CARD DASHBOARD %>
-      <div class = "dashboard-cards">
-        <% @bookings.each do |booking| %>
-        <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 mt-3 d-flex flex-column justify-content-between">
-          <div class="m-2">
-            <div class= "d-flex justify-content-center p-2">
-              <h2 style="color: #003459;"><%= booking.van.title %></h2>
-            </div>
-            <div class="my-2 d-flex justify-content-center ">
-              <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
-            </div>
-            <div class="d-flex flex-row justify-content-around">
-              <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
-              <p class= "days">
-                <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
-                    @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
-                    @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
-                      %>
-                <%if @r < 0 %>
-                  <%= "#{@r * (-1)} days ago" %>
-                <%else%>
-                  <%= "In #{@r} days" %>
-                <%end%>
-              </p>
+<div class="app-container" style="padding: 70px 0px">
+
+  <div class="app-content">
+
+
+    <div class="app-sidebar">
+          <div class="app-sidebar-link">
+            <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-home">
+              <path d="M3 9l9-7 9 7v11a2 2 0 0 1-2 2H5a2 2 0 0 1-2-2z" />
+              <polyline points="9 22 9 12 15 12 15 22" /></svg>
+          </div>
+          <%= link_to my_vans_path do %>
+          <div href="" class="app-sidebar-link active">
+            <svg class="link-icon" xmlns="http://www.w3.org/2000/svg" width="24" height="24" fill="none" stroke="currentColor" stroke-linecap="round" stroke-linejoin="round" stroke-width="2" class="feather feather-pie-chart" viewBox="0 0 24 24">
+              <defs />
+              <path d="M21.21 15.89A10 10 0 118 2.83M22 12A10 10 0 0012 2v10z" />
+            </svg>
+          </div>
+        <%end%>
+        </div>
+
+        <div class="vans-container" style = "overflow-x: scroll;">
+          <div class="vans-container-header">
+            <div class="vans-container-header-left" style = "display:sticky; left:10px;">
+            <% @count = 0 %>
+            <% @bookings.each do |booking| %>
+            <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+            @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+            @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+              %>
+            <%if @r > 0 %>
+            <% @count += 1 %>
+            <%end%>
+            <%end%>
+              <p class="rentals-to-come">Locations à venir <em>  (<%=@count%>)</em></p>
             </div>
           </div>
-            <div class="card-trip-img-dashboard">
-              <%= cl_image_tag booking.van.photos.first.key, height: 300, width: 400, crop: :fill %>
-            </div>
+
+          <%# CARD DASHBOARD %>
+          <div class = "dashboard-cards" >
+            <% @bookings.each do |booking| %>
+            <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+            @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+            @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+              %>
+            <%if @r > 0 %>
+              <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 mt-3 d-flex flex-column justify-content-between">
+                <div class="m-2">
+                  <div class= "d-flex justify-content-center p-2">
+                    <h2 style="color: #003459;"><%= booking.van.title %></h2>
+                  </div>
+                  <div class="my-2 d-flex justify-content-center ">
+                    <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-around">
+                    <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
+                    <p class= "days">
+                      <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+                          @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+                          @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+                            %>
+                      <%if @r < 0 %>
+                        <%= "#{@r * (-1)} days ago" %>
+                      <%else%>
+                        <%= "In #{@r} days" %>
+                      <%end%>
+                    </p>
+                  </div>
+                </div>
+                  <div class="card-trip-img-dashboard">
+                    <%= cl_image_tag booking.van.photos.first.key, height: 300, width: 400, crop: :fill %>
+                  </div>
+              </div>
+              <%end%>
+            <% end %>
         </div>
-        <% end %>
       </div>
     </div>
+    </div>
+</div>
 
-  </div>
+
+<div class="app-container" style = "margin-left:70px;padding-right:70px;">
+  <div class="app-content">
+        <div class="vans-container" style = "overflow-x: scroll;">
+        <div class="vans-container-header">
+          <div class="vans-container-header-left">
+            <% @count = 0 %>
+            <% @bookings.each do |booking| %>
+            <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+            @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+            @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+              %>
+            <%if @r < 0 %>
+            <% @count += 1 %>
+            <%end%>
+            <%end%>
+              <p class="rentals-to-come">Locations passées</p>
+              <p class="rentals-number"><em>  (<%=@count%>)</em></p>
+            </div>
+            <p class="time"><%= Time.now().to_s.split(" ")[0] %></p>
+          </div>
+
+          <%# CARD DASHBOARD %>
+          <div class = "dashboard-cards">
+            <% @bookings.each do |booking| %>
+            <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+            @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+            @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+              %>
+            <%if @r < 0 %>
+              <div class="col-3 card-trip-dashboard border rounded-4 px-0 mb-4 mt-3 d-flex flex-column justify-content-between">
+                <div class="m-2">
+                  <div class= "d-flex justify-content-center p-2">
+                    <h2 style="color: #003459;"><%= booking.van.title %></h2>
+                  </div>
+                  <div class="my-2 d-flex justify-content-center ">
+                    <p class="card-text-dashboard" style="color: #003459;"> <%= booking.van.brand %> -  <%= booking.van.location %></p>
+                  </div>
+                  <div class="d-flex flex-row justify-content-around">
+                    <p><span style="color: #005FA3; font-size: 14px; font-weight: 400;"><%= booking.start_date %> - <%= booking.end_date %></span></p>
+                    <p class= "days">
+                      <% @s = booking.start_date.to_s.split("-").map{|el| el.to_i}
+                          @a = Time.now().to_s.split(" ")[0].split("-").map{ |el| el.to_i}
+                          @r = ((@s[0] - @a[0]) * 360) + ((@s[1] - @a[1]) * 30) + ((@s[2] - @a[2]))
+                            %>
+                      <%if @r < 0 %>
+                        <%= "#{@r * (-1)} days ago" %>
+                      <%else%>
+                        <%= "In #{@r} days" %>
+                      <%end%>
+                    </p>
+                  </div>
+                </div>
+                  <div class="card-trip-img-dashboard">
+                    <%= cl_image_tag booking.van.photos.first.key, height: 300, width: 400, crop: :fill %>
+                  </div>
+              </div>
+              <%end%>
+            <% end %>
+        </div>
+      </div>
+</div>
+
+
+
+
+
 </div>
