--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -116,7 +116,7 @@
             <%= simple_form_for [@van, @booking] do |f| %>
             <%= f.input :start_date, as: :date, html5: true %>
             <%= f.input :end_date, as: :date, html5: true %>
-            <%= f.submit "Book your van", class: "btn btn-primary" %>
+            <%= f.submit "Book your van", class: "btn btn-primary", id: "confirm-reservation" %>
           <% end %>
           <div class="border-top d-flex align-items-center">
             <div class="mt-3"><span>Prix total</span></div>
