--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -7,6 +7,6 @@
   <%= f.input :price_per_day%>
   <%= f.input :mileage %>
   <%= f.input :location, input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"}, wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
-  <%= f.input :photo, as: :file %>
-  <%= f.submit "create your van", class: "btn btn-primary" %>
+  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+  <%= f.submit "Rent your Van", class: "btn btn-primary" %>
 <% end %>
