--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -69,8 +69,7 @@
         <div class="border-bottom">
           <h3><%=@van.title%></h3>
           <h5><%=@van.brand%></h5>
-          <p><%=@van.location%></p>
-          <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> peoples</p>
+          <p><i class="fa-solid fa-user-group"> </i> <%= @van.capacity%> person</p>
         </div>
         <div class="border-bottom" style="margin-top:20px">
           <h4>Description:</h4>
@@ -79,7 +78,7 @@
         <div class="d-flex justify-content-between
         ">
           <div  class="pe-5" style="margin-top:20px">
-            <h4>Van Characteristics:</h4>
+            <h4>Caracteristics:</h4>
             <p><i class="fa-solid fa-road"></i>  <%= @van.mileage.to_s.gsub(/\d(?=(...)+$)/, '\0 ') %> mileage</p>
             <p><i class="fa-solid fa-brush"></i>  <%= @van.color %></p>
             <p><i class="fa-solid fa-gas-pump"></i>  Gaz</p>
@@ -126,8 +125,8 @@
 </div>
 <div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px">
   <div style="margin-top:20px">
-    <h4>Location</h4>
-    <p><%=@van.location%></p>
+    <h4>Map</h4>
+    <p><i class="fa-solid fa-location-dot"></i> <%=@van.location%></p>
   </div>
   <div style="width: 100%; height: 600px;"
     data-controller="map"
