--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -17,6 +17,7 @@
 .app-sidebar {
   display: flex;
   flex-direction: column;
+  width: 20%;
   margin-right: 25px;
   margin-left: 10px;
 
@@ -36,7 +37,7 @@
   }
 
   &:hover{
-    color: #00477A;
+    color: #FCD0A1;
   }
 }
 
