--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -156,12 +156,12 @@
 
 
 
-<div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px">
-  <div style="margin-top:20px">
+<div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px; margin-bottom:40px">
+  <div style="margin-top:20px ">
     <h4>Map</h4>
-    <p><i class="fa-solid fa-location-dot"></i> <%=@van.location%></p>
+    <p><i class="fa-solid fa-location-dot"></i> <%= @van.location%></p>
   </div>
-  <div style="width: 100%; height: 600px;"
+  <div style="width: 100%; height: 400px;"
     data-controller="map"
     data-map-markers-value="<%= @marker.to_json %>"
     data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
