--- a/app/views/reviews/new.html.erb
+++ b/app/views/reviews/new.html.erb
@@ -2,8 +2,7 @@
     <h1>New review</h1>
       <%= simple_form_for [@booking, @review] do |f| %>
         <%= f.input :content %>
-        <%= f.collection_radio_buttons :rating, [[5], [4], [3], [2], [1]], :first, :last, item_wrapper_tag: false, boolean_style: :inline do |b| %>
-  <%= b.radio_button + b.label {''} %>
+        <%= f.input :rating, collection: (1..5).to_a, label: "Rate your experience", input_html: {data: {controller: "star-rating"}} %>
     <% end %>
         <%= f.submit "Submit review", class: "btn btn-primary" %>
       <% end %>
