--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -100,32 +100,39 @@
       <div class="card card-trip" style="background-color:white;margin-top:15px;position:sticky;top:90px">
         <div class="card-body">
           <h6 class="card-title" style="text-align:"><%=@van.price_per_day%>€ / nuit</h6>
-          <%= simple_form_for [@van, @booking],
+          <div data-controller="flatpickr" data-flatpickr-dates-value="<%= @van.flatpickr_booked_dates_object %>">
+          <div data-controller="dynamic-booking-price"
+     data-dynamic-booking-price-price-value="<%= @van.price_per_day %>">
+  <%= simple_form_for [@van, @booking],
                     html: {
                       data: {
-                        controller: 'flatpickr'
+                        controller: 'flatpickr', class: 'datepicker'
                       }
                     } do |f| %>
-            <%= f.input :start_date,
-              as: :string,
-              input_html: {
-                data: {
-                  flatpickr_target: 'startDateInput',
-                }
-              } %>
-            <%= f.input :end_date,
-              as: :string,
-              input_html: {
-                data: {
-                  flatpickr_target: 'endDateInput'
-                }
-              } %>
-            <%= f.submit 'Book now!', class: 'btn btn-primary' %>
-          <% end %>
-          <div class="border-top d-flex align-items-center">
-            <div class="mt-3"><span>Prix total</span></div>
+    <%= f.input :start_date, as: :string,
+                input_html: {
+                  data: {
+                    flatpickr_target: 'startDateInput',
+                    dynamic_booking_price_target: 'startDateInput',
+                    action: 'change->dynamic-booking-price#updatePrice'
+                  }
+                } %>
+    <%= f.input :end_date, as: :string,
+                input_html: {
+                  data: {
+                    flatpickr_target: 'endDateInput',
+                    dynamic_booking_price_target: 'endDateInput',
+                    action: 'change->dynamic-booking-price#updatePrice'
+                  }
+                } %>
+    <%= f.submit 'Book now!', class: 'btn btn-primary' %>
+  <% end %>
+  <p>
+    Total price: <span data-dynamic-booking-price-target="priceHolder"><%= @van.price_per_day %></span> €
+  </p>
+  </div>
+  </div>
             <div class="mt-3"><span>
-
             A CALCULE
 
             </span></div>
