--- a/app/assets/stylesheets/components/_address_autocomplete.scss
+++ b/app/assets/stylesheets/components/_address_autocomplete.scss
@@ -3,6 +3,6 @@
   width: 100%;
   border: 1px solid lightgrey;
   box-shadow: none;
-  background-color: transparent;
+  background-color: white;
   border-radius: 15px;
 }
