--- a/app/assets/stylesheets/components/_button.scss
+++ b/app/assets/stylesheets/components/_button.scss
@@ -35,3 +35,22 @@
     transform: scale(1.1)
   }
 }
+
+
+
+.btn-classic-new {
+  border-radius: 40px;
+  margin-top: 10px;
+  padding: 0.7em 1em;
+  background-size: 200% auto;
+  color: white;
+  box-shadow: 0 4px 6px rgba(50,50,93,.11), 0 1px 3px rgba(0,0,0,.08);
+  background-image: linear-gradient(to right, #003459 0%, #005FA3 50%, #003459 100%);
+  transition: 0.5s;
+  border: none;
+
+  &:hover {
+    background-position: right center;
+    color: white
+  }
+}
