--- a/app/assets/stylesheets/components/_form.scss
+++ b/app/assets/stylesheets/components/_form.scss
@@ -11,3 +11,37 @@ abbr[title] {
 .form-control {
   border-radius: 15px;
 }
+
+.form-select {
+  display: block;
+  width: 100%;
+  padding: 0.375rem 2.25rem 0.375rem 0.75rem;
+  -moz-padding-start: calc(0.75rem - 3px);
+  font-size: 1rem;
+  font-weight: 400;
+  line-height: 1.5;
+  color: #0E0000;
+  background-color: #ffffff;
+  background-repeat: no-repeat;
+  background-position: right 0.75rem center;
+  background-size: 16px 12px;
+  border: 1px solid #ced4da;
+  border-radius: 15px;
+  transition: border-color 0.15s ease-in-out, box-shadow 0.15s ease-in-out;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  appearance: none;
+}
+
+.form-new {
+
+  color: #ffffff;
+  padding: 20px;
+  border-radius: 15px;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+
+  background:  linear-gradient(#ceebfc3b, #80acff37); //rgba(255, 255, 255, 0.254);
+  box-shadow: 0 0 15px rgba(0,0,0,0.2);
+  backdrop-filter: blur(5px);
+
+}
