--- a/app/views/shared/_form.html.erb
+++ b/app/views/shared/_form.html.erb
@@ -1,12 +1,33 @@
-<%= simple_form_for(van) do |f| %>
-  <%= f.input :title %>
-  <%= f.input :capacity %>
-  <%= f.input :brand %>
-  <%= f.input :color %>
-  <%= f.input :description %>
-  <%= f.input :price_per_day%>
-  <%= f.input :mileage %>
-  <%= f.input :location, input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"}, wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
-  <%= f.input :photos, as: :file, input_html: { multiple: true } %>
-  <%= f.submit "Rent your Van", class: "btn btn-primary" %>
-<% end %>
+
+
+<div class="form-new">
+  <%= simple_form_for(van) do |f| %>
+    <%= f.input :title, placeholder: 'Great vintage van...' %>
+    <%= f.input :location, placeholder: 'Paris, London...', input_html: {data: {location_autocomplete_target: "location"}, class: "d-none"}, wrapper_html: {data: {controller: "location-autocomplete", location_autocomplete_api_key_value: ENV["MAPBOX_API_KEY"]}} %>
+    <%= f.input :description, placeholder: 'Describe your van...Be creative!'  %>
+
+  <div class="row">
+    <div class="col-6">
+      <%= f.input :brand, placeholder: 'Ford, Volkswagen...'  %>
+    </div>
+    <div class="col-6">
+      <%= f.input :color, placeholder: 'Red, white, blue...'  %>
+    </div>
+  </div>
+
+<div class="row">
+    <div class="col-4">
+      <%= f.input :capacity,  collection: 1..10 %>
+    </div>
+    <div class="col-4">
+      <%= f.input :price_per_day, placeholder: '60$ / day', wrapper_html: { class:'' }%>
+    </div>
+    <div class="col-4">
+     <%= f.input :mileage, placeholder: '102030 km' %>
+    </div>
+</div>
+    <%= f.input :photos, as: :file, input_html: { multiple: true } %>
+    <%= f.submit "Rent your Van", class: "btn btn-classic-new" %>
+  <% end %>
+
+</div>
