--- a/app/assets/stylesheets/components/_banner.scss
+++ b/app/assets/stylesheets/components/_banner.scss
@@ -1,4 +1,5 @@
 .banner {
+  z-index: 10;
   background-size: cover;
   background-position: center;
   padding: 150px 0;
@@ -41,4 +42,8 @@
   color: white;
   opacity: .7;
   text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
+
+.derriere{
+  visibility: hidden;
 }
