--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -2,7 +2,6 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
 </head>
 
-
 <div class="banner">
   <div class="cover">
     <h1>Discover what a trip is.</h1>
@@ -10,13 +9,20 @@
       <label for="from">
         <i class="ion-location"></i>
       </label>
-      <input type="search" placeholder="Where do you want to go?">
-      <input type="submit" value="Search">
+      <%= form_with url: vans_path, method: :get, class: "d-flex derriere" do %>
+        <%= text_field_tag :query,
+          params[:query],
+          type: "search",
+          placeholder: "Where do you want to go?"
+        %>
+        <%= submit_tag "Search", type: "submit" %>
+      <% end %>
     </form>
 
   </div>
 </div>
-<% @vans = Van.all %>
+
+
 
 <div class="mx-auto mt-5" style="width: 90%;">
   <div class="cards">
@@ -145,3 +151,39 @@
     </div>
   </div>
 </div>
+
+
+<ul class="filter-tabs">
+        <li>
+          <button class="filter-button filter-active" data-translate-value="0">
+            New
+          </button>
+        </li>
+        <li>
+          <button class="filter-button" data-translate-value="100%">
+            Popular
+          </button>
+        </li>
+        <li>
+          <button class="filter-button" data-translate-value="200%">
+            Following
+          </button>
+        </li>
+      </ul>
+
+<div class="selectors">
+  <%= form_with url: vans_path, method: :get, class: "d-flex" do %>
+        <%= text_field_tag :query,
+          params[:query],
+          value: "test"
+        %>
+        <%= submit_tag "Search", type: "submit" %>
+      <% end %>
+</div>
+<div id="radio_buttons">
+    <%= radio_button_tag 'radioGroup', "1" %> 1 &nbsp;&nbsp;&nbsp;
+    <%= radio_button_tag 'radioGroup', "2" %> 2 &nbsp;&nbsp;&nbsp;
+    <%= radio_button_tag 'radioGroup', "4" %> 4 &nbsp;&nbsp;&nbsp;
+</div>
+
+
