--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -62,7 +62,9 @@
   </div>
 </div>
 
+<div class="cards">
 </div>
+
 
   <div class="d-flex justify-content-between">
     <div style="margin-top:20px;width:65%">
@@ -101,42 +103,23 @@
         <div class="card-body">
           <h6 class="card-title" style="text-align:"><%=@van.price_per_day%>€ / nuit</h6>
           <div data-controller="flatpickr" data-flatpickr-dates-value="<%= @van.flatpickr_booked_dates_object %>">
-          <div data-controller="dynamic-booking-price"
-     data-dynamic-booking-price-price-value="<%= @van.price_per_day %>">
-  <%= simple_form_for [@van, @booking],
-                    html: {
-                      data: {
-                        controller: 'flatpickr', class: 'datepicker'
-                      }
-                    } do |f| %>
-    <%= f.input :start_date, as: :string,
-                input_html: {
-                  data: {
-                    flatpickr_target: 'startDateInput',
-                    dynamic_booking_price_target: 'startDateInput',
-                    action: 'change->dynamic-booking-price#updatePrice'
-                  }
-                } %>
-    <%= f.input :end_date, as: :string,
-                input_html: {
-                  data: {
-                    flatpickr_target: 'endDateInput',
-                    dynamic_booking_price_target: 'endDateInput',
-                    action: 'change->dynamic-booking-price#updatePrice'
-                  }
-                } %>
-    <%= f.submit 'Book now!', class: 'btn btn-primary' %>
-  <% end %>
-  <p>
-    Total price: <span data-dynamic-booking-price-target="priceHolder"><%= @van.price_per_day %></span> €
-  </p>
-  </div>
-  </div>
-            <div class="mt-3"><span>
-            A CALCULE
-
-            </span></div>
+            <div data-controller="dynamic-booking-price" data-dynamic-booking-price-price-value="<%= @van.price_per_day %>">
+              <%= simple_form_for [@van, @booking],
+                html: { data: { controller: 'flatpickr', class: 'datepicker'} } do |f| %>
+                <%= f.input :start_date, as: :string, input_html: { data: {
+                  flatpickr_target: 'startDateInput',
+                  dynamic_booking_price_target: 'startDateInput',
+                  action: 'change->dynamic-booking-price#updatePrice'
+                  }} %>
+                <%= f.input :end_date, as: :string,input_html: { data: { flatpickr_target: 'endDateInput',dynamic_booking_price_target: 'endDateInput', action: 'change->dynamic-booking-price#updatePrice'}} %>
+                <%= f.submit 'Book now!', class: 'btn btn-primary' %>
+              <% end %>
+              <p>
+                Total price: <span data-dynamic-booking-price-target="priceHolder"><%= @van.price_per_day %></span> €
+              </p>
+            </div>
           </div>
+          <div class="mt-3"><span>A CALCULE</span></div>
         </div>
       </div>
     </div>
@@ -162,15 +145,9 @@
 </div>
 
 
-
 <div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px; margin-bottom:40px">
   <div style="margin-top:20px ">
     <h4>Map</h4>
     <p><i class="fa-solid fa-location-dot"></i> <%= @van.location%></p>
   </div>
-  <div style="width: 100%; height: 400px;"
-    data-controller="map"
-    data-map-markers-value="<%= @marker.to_json %>"
-    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
-  </div>
-</div>
+
