--- a/app/assets/stylesheets/components/_card.scss
+++ b/app/assets/stylesheets/components/_card.scss
@@ -112,3 +112,17 @@
   font-weight: 700;
   color: #003459;
 }
+
+.capacity {
+  position: absolute;
+  top: 90%;
+  left: 81.5%;
+  background-color: #fab265;
+  font-size: 11px;
+  border-radius: 20px;
+  flex-shrink: 0;
+  padding: 4px 12px;
+  font-weight: 700;
+  color: white;
+  text-shadow: 1px 1px 3px rgba(0,0,0,0.2);
+}
