--- a/app/assets/stylesheets/pages/_dashboard.scss
+++ b/app/assets/stylesheets/pages/_dashboard.scss
@@ -1,6 +1,8 @@
 @import url("https://fonts.googleapis.com/css?family=DM+Sans:400,500,700&display=swap");
 
-
+a{
+  text-decoration: none;
+}
 .app-container {
   width: 100%;
   display: flex;
@@ -21,6 +23,7 @@
   margin-left: 10px;
 
   &-link{
+    color: #005FA3;
     display: flex;
     justify-content: center;
     text-align: center;
