--- a/app/views/vans/show.html.erb
+++ b/app/views/vans/show.html.erb
@@ -134,7 +134,7 @@
 </div>
 
 
-<div class="container" style="width:80%;margin-top:20px">
+<div class="container" style="margin-top:20px">
   <h3><span class="mov" style="font-size:22px;"> <i class="fa-solid fa-star" style="font-size:15px"></i> <%= @van.bookings.count - 1 %> Comments </span></h3>
   <div class="reviews row">
   <% @van.bookings.each do |booking| %>
@@ -151,9 +151,14 @@
   </div>
 </div>
 
-
-<div class="container van-show border-top d-flex justify-content-center flex-column"  style="width:80%;margin-top:20px; margin-bottom:40px">
+ <div class="container van-show border-top d-flex justify-content-center flex-column"  style="margin-top:20px; margin-bottom:40px">
   <div style="margin-top:20px ">
     <h4>Van's location</h4>
     <p><i class="fa-solid fa-location-dot"></i> <%= @van.location%></p>
   </div>
+  <div style="width: 100%; height: 400px;"
+    data-controller="map"
+    data-map-markers-value="<%= @marker.to_json %>"
+    data-map-api-key-value="<%= ENV['MAPBOX_API_KEY'] %>">
+  </div>
+</div>
